--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.1",
     "react-to-print": "^2.14.12",
     "scss": "^0.2.4",
     "web-vitals": "^2.1.4"
