--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.7",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.1",
     "react-to-print": "^2.14.12",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "scss": "^0.2.4",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
