--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.3.0",
     "joi": "^17.9.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-chartjs-2": "^5.2.0",
+    "react-circular-progressbar": "^2.1.0",
+    "react-currency-input-field": "^3.6.11",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.7",
     "react-redux": "^8.0.5",
